# myrepo

./: .gitignore  Dockerfile  README.md  conf-sample.yaml  control_asg_on_demand.sh  deploy-fax-client-prep.sh  development_requirements.txt  faxbarcode.avsc  faxbarcode2.avsc  log.yaml  pipeline.yml  pyproject.toml  readme.md  requirements.txt
.github/: CODEOWNERS
config_samples/: conf-sample.yaml  log-sample.yaml
helm/: chart_version.sh
helm/faas-barcode/: Chart.yaml  values.yaml
helm/faas-barcode/templates/: _helpers.tpl  deployment.yaml
log_config/: start-td-agent.sh  update_td-agent.sh
log_config/oci/: config  private.pem
log_config/td-agent/: td-agent.conf
log_config/td-agent/conf.d/worker_0/: barcode.conf
resources/: conf-sample.yaml
src/: avroparser.py  barcodemain.py  barcodereader.py  confutil.py  eventconsumer.py  eventhandler.py  eventproducer.py  zbarreader.py
src/barcode_service/: __init__.py  __main__.py  avroparser.py  barcodemain.py  barcodereader.py  cli_parser.py  confutil.py  dao_exceptions.py  default_values.py  environment_variables.py  event_data.py  event_exceptions.py  eventconsumer.py  eventhandler.py  eventproducer.py  faxdao.py  generic_scanner.py  helpers.py  processing_exceptions.py  restapi.py  service_data.py  spring_config.py  synchronization.py  version.py  zbarreader.py
src/barcode_service/resources/: reader.avsc
src/pytests/: barcode.tif  log.yaml  nobarcode.tif  shared_data.py  test_avroparser.py  test_barcodereader.py  test_confutil.py  test_environment_configuration.py  test_eventconsumer.py  test_eventhandler.py  test_eventproducer.py  test_example.py  test_faxdao.py  test_module_import.py  test_spring_config.py
src/pytests/resources/configurations/: conf.yaml
src/pytests/resources/images/: L12.28.40.48(a-zA-Z0-9)(5P.5pp).tif  brandon_jenkins_adapthealth.tif
