[build-system]
requires = ["setuptools>=45.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode_service"
requires-python = ">=3.6"
authors = [
    { name = "Fax Service Team" }
]
keywords = ["Fax", "Barcode", "Service", "FaaS"]
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
barcode_service = "barcode_service:main"

[tool.setuptools]
packages = ['barcode_service']

[tool.setuptools.package-dir]
"barcode_service" = "src/barcode_service"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
readme = { file = "README.md" }
version = { attr = "barcode_service.__version__" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "development_requirements.txt" }

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
testpaths = [
    "src/pytests",
]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src/barcode_service"]

[tool.pylint]
max-line-length = 360
output-format = "colorized"
reports = "True"
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
