[build-system]
requires = ["setuptools>=64.0", "pip>=21.3"]
build-backend = "setuptools.build_meta"

[project]
name = "barcode_service"
requires-python = ">=3.8"
authors = [
    { name = "Fax Service Team" }
]
keywords = ["Fax", "Barcode", "Service", "FaaS"]
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.scripts]
barcode_service = "barcode_service:main"

[tool.setuptools]
packages = ['barcode_service', 'barcode_service.resources']

[tool.setuptools.package-dir]
"barcode_service" = "src/barcode_service"

[tool.setuptools.package-data]
"barcode_service.resources" = ["*.avsc"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
readme = { file = "README.md" }
version = { attr = "barcode_service.version.SERVICE_VERSION" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "development_requirements.txt" }

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 0"
testpaths = [
    "src/pytests",
]
python_files = ["test_*.py"]
log_cli = "True"
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s][%(name)s][%(lineno)d][%(threadName)s][%(levelname)s][%(message)s]"

[tool.coverage.run]
source = ["src/barcode_service"]
omit = ["src/barcode_service/__main__.py"]


# More Options -> https://pylint.pycqa.org/en/latest/user_guide/configuration/all-options.html
[tool.pylint]
max-line-length = 360
output-format = "colorized"
reports = "True"
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
    "W1203", # (logging-fstring-interpolation)
    "R0914", # (too-many-locals)
    "R1702", # (too-many-nested-blocks)
    "R0912", # (too-many-branches)
    "R0915", # (too-many-statements)
]
enable = [
    "W1201", # (logging-not-lazy)
]
